优化数据库设计并修改兼容
